[gd_scene load_steps=8 format=3 uid="uid://cq7fb53ru4xux"]

[ext_resource type="Script" path="res://scenes/menus/levelEndPopup/level_end_pop_up.gd" id="1_g8vh8"]
[ext_resource type="Theme" uid="uid://5evnrjqdgbht" path="res://ui/themes/ui_theme.tres" id="2_ybrx6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46fdj"]
bg_color = Color(0, 0, 0, 0.568627)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 40.0
expand_margin_right = 40.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23hwn"]
bg_color = Color(0, 0, 0, 0.172549)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_xn257"]
font_size = 14
outline_size = 1
outline_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_jp6lu"]
font_size = 9
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_s62wp"]
font_size = 18
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[node name="LevelEndPopUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8vh8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_46fdj")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_right = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_ybrx6")

[node name="score" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_23hwn")
text = "Score: 10"
label_settings = SubResource("LabelSettings_xn257")
horizontal_alignment = 1

[node name="total_enemies_killed" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total Enemies Killed: 10"
label_settings = SubResource("LabelSettings_jp6lu")
horizontal_alignment = 1

[node name="total_items_collected" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Total Items Collected: 10"
label_settings = SubResource("LabelSettings_jp6lu")
horizontal_alignment = 1

[node name="time_taken" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time Taken: 10secs"
label_settings = SubResource("LabelSettings_jp6lu")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Button" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
action_mode = 0
text = "Continue"

[node name="Title" type="Label" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 11.0
offset_right = 81.0
offset_bottom = 37.0
grow_horizontal = 2
theme = ExtResource("2_ybrx6")
text = "LEVEL COMPLETED"
label_settings = SubResource("LabelSettings_s62wp")
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
